# augment-adam

./: .augment-guidelines.yaml  .augment.guidelines.yaml  .coveragerc  .dockerignore  .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CONTEXT_ENGINE.md  CONTEXT_ENGINE_MCP.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  DIRECTORY_STRUCTURE.md  Dockerfile  Dockerfile.test-gen  Dockerfile.worker  MCP_CONTEXT_ENGINE_README.md  MIGRATION_PLAN.md  NEW_STRUCTURE.md  PLANNING.md  PR_DESCRIPTION.md  README.md  SECURITY.md  TASKS.md  TESTING.md  aggregation_commit_message.txt  augment-guidelines.yaml  augment_collaboration_model.yaml  code_quality_commit_message.txt  commit_message.txt  communication_commit_message.txt  compose.yaml  context-engine-requirements.txt  coordinator_commit_message.txt  coverage.json  docker-compose.test-gen.yml  docker-compose.yml  github-ruleset-updated.json  github-ruleset.json  (+22 more)
.devcontainer/: .dockerignore  Dockerfile  cleanup.sh  devcontainer.json  docker-compose.bake.yml  docker-compose.yml  docker-compose.yml.backup  docker-compose.yml.buildkit  entrypoint.sh  post-start.sh  setup_mcp_integration.sh  verify_docker_access.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
api/: Dockerfile  main.py  requirements.txt
arch/: .pre-commit-config.yaml.bak
augment_adam/: config.py
config/: test_generator_config.json
context_engine/: __init__.py
dev/: README.txt
docker/: Dockerfile.api  Dockerfile.mcp-context-engine  Dockerfile.test-gen  README.md  context-engine-docker-compose.yml  docker-compose.yml  mcp-context-engine-docker-compose.yml
docs/: CONTEXT_ENGINE.md  CONTEXT_ENGINE_MCP.md  CONTRIBUTING.md  DEVCONTAINER.md  GITHUB_WORKFLOW.md  GUIDELINES_OVERVIEW.md  MAINTAINERS.md  MCP_CONTEXT_ENGINE_README.md  MIGRATION_GUIDE.md  README.md  RELEASE.md  SUPPORT.md  TAGGING_GUIDELINES.md  TASKS.md  TESTING_GUIDELINES.md  api.rst  architecture.rst  conf.py  container_optimization.md  developer_guide.rst  doc_config.json  docker-mcp-tools.md  docker_configuration.md  docs  error_handling.md  github-api-guide.md  gpu_test_generation.md  index.md  index.rst  local_model_setup.md  mcp-ecosystem-tracker.md  mcp-integration.md  mcp-server-template.md  mcp_context_engine_setup.md  model-context-protocol.md  model_management_architecture.md  plugin_system.md  qwen3_models.md  settings_management.md  streamable_http_transport.md  (+7 more)
dukat/: __init__.py  cli.py  config.py  global_settings.json
examples/: README.md  README_streaming.md  agent_core_example.py  basic_usage.py  embedding_example.py  generate_integrated_memory_service.py  generate_memory_service.py  mcp_server_example.py  memory_client_demo.py  memory_client_sync_demo.py  memory_integration_example.py  memory_service_advanced_client.py  memory_service_client.py  memory_service_fastapi_mcp.py  memory_service_fastmcp.py  memory_service_integrated.py  memory_service_openwebui_mcp.py  memory_service_vscode_mcp.py  model_sharing_example.py  qwen3_example.py  qwen3_model_test.py  streamable_http_mcp_client.py  streamable_http_mcp_server.py  streaming_example.py  streaming_test.py  vscode_mcp_demo.py  worker_agent_example.py
mcp_context_engine/: __init__.py
notebooklm_input/: vscode_extension_config_metadata.md  vscode_extension_docs_other.md  vscode_extension_source_code.md
redis-config/: redis.conf
reports/: __init___report.md
scripts/: Dockerfile.test-gen  README.md  add_cross_references.py  add_detailed_api_docs.py  add_diagrams.py  add_sphinx_diagrams.py  augment_startup.sh  auto_test_generator.py  background_test_service.py  bake_devcontainer.sh  batch_code_quality_check.py  build_complete_docs.py  build_devcontainer_simple.sh  build_docs.py  build_simple_docs.py  build_sphinx_docs.py  bulk_enhanced_test_generator.py  bulk_generate_tests.py  check_commit_message.py  code_quality_checker.py  combine_testing_framework_docs.py  create_chunked_data_file.py  create_notebooklm_input.py  customize_theme.py  docker-compose.test-gen.yml  docker-compose.yml  enhance_docs.py  enhanced_test_generator.py  finalize_docs.py  fix_generated_tests.py  fix_include_paths.py  fix_remaining_warnings.py  fix_sphinx_critical_warnings.py  fix_sphinx_warnings.py  fix_title_underlines.py  fix_user_guide_includes.py  generate_agent_coordination_doc.py  (+60 more)
(+1145 files in other folders)
