[tool.poetry]
name = "dukat"
version = "0.3.2"
description = "An open source AI assistant focused on personal automation"
authors = ["Dukat Team <info@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/dukat"
documentation = "https://dukat.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# File created: 2025-04-22
# Last updated: 2025-04-26

[tool.poetry.dependencies]
python = "^3.10"
dspy-ai = "^2.6.18"
chromadb = "^0.4.22"
rich = "^13.7.0"
pydantic = "^2.5.3"
typer = "^0.9.0"
asyncio = "^3.4.3"
aiohttp = "^3.9.1"
psutil = "^5.9.0"
pyyaml = "^6.0.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dukat = "dukat.cli:app"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I", "N", "UP", "ANN", "D"]
ignore = ["ANN101", "D203", "D212"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
# Commented out coverage options to make tests run
# addopts = "--cov=dukat --cov-report=term-missing"
