[build-system]
requires = ["setuptools>=42", "wheel", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "augment-adam"
version = "0.1.0"
description = "An intelligent assistant with advanced memory capabilities"
authors = ["Augment Adam Team <info@augment-adam.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/augment-adam/augment-adam"
documentation = "https://augment-adam.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
# Core dependencies
faiss-cpu = ">=1.7.0"  # Use faiss-gpu for GPU support
sentence-transformers = ">=2.2.0"
scikit-learn = ">=1.0.0"
numpy = ">=1.20.0"
pydantic = ">=2.0.0"
# Memory systems
neo4j = {version = ">=5.0.0", optional = true}
redis = ">=4.0.0"
# Web and API
fastapi = ">=0.95.0"
uvicorn = ">=0.20.0"
# Utilities
tqdm = ">=4.65.0"
aiohttp = ">=3.8.0"
asyncio = ">=3.4.3"
rich = ">=13.7.0"
typer = ">=0.9.0"
psutil = ">=5.9.0"
pyyaml = ">=6.0.0"
requests = ">=2.31.0"
beautifulsoup4 = ">=4.12.0"
dspy-ai = ">=2.6.18"
chromadb = ">=0.4.22"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.20.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
isort = ">=5.0.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"
sphinx = ">=7.2.6"
sphinx-rtd-theme = ">=1.3.0"
pre-commit = ">=3.5.0"
ruff = ">=0.1.6"

[tool.poetry.extras]
neo4j = ["neo4j"]

[tool.poetry.scripts]
augment-adam = "augment_adam.cli:app"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I", "N", "UP", "ANN", "D"]
ignore = ["ANN101", "D203", "D212"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=augment_adam --cov-report=term-missing"
